--- a/src/netcore/NetCoreQt.Generator/NetCoreQt.Generator.csproj
+++ b/src/netcore/NetCoreQt.Generator/NetCoreQt.Generator.csproj
@@ -15,6 +15,14 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <None Remove="Templates\HostEventBaseClassInteral.template" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <EmbeddedResource Include="Templates\HostEventBaseClassInteral.template" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="CommandLineParser" Version="2.9.1" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
 	</ItemGroup>
