--- a/src/netcore/NetCoreQt.Generator/NetCoreQt.Generator.csproj
+++ b/src/netcore/NetCoreQt.Generator/NetCoreQt.Generator.csproj
@@ -1,8 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
-		<TargetFramework>net7.0</TargetFramework>
+		<TargetFramework>net8.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<Title>Generator for NetCoreQt projects and files</Title>
@@ -13,14 +13,6 @@
 		<Description>Console tool for generating project and files from nqs files</Description>
 		<Version>0.0.1</Version>
 	</PropertyGroup>
-
-	<ItemGroup>
-	  <None Remove="Templates\HostEventBaseClassInteral.template" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <EmbeddedResource Include="Templates\HostEventBaseClassInteral.template" />
-	</ItemGroup>
 
 	<ItemGroup>
 		<PackageReference Include="CommandLineParser" Version="2.9.1" />
